handle timeouts promises etc

--- a/fe/index.html
+++ b/fe/index.html
@@ -15,6 +15,14 @@
       type="text/javascript"
       charset="utf-8"
     ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.7.5/beautify.min.js"
+      integrity="sha256-z3YWAUWq4ZqhJwjqxdTFwmXUOkEPpQUpdxWHCZVADA4="
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="./js/helpers.js" defer></script>
+    <script src="./js/main.js" defer></script>
   </head>
   <body>
     <div class="site-container">
@@ -30,6 +38,5 @@
       </div>
     </div>
     <script src="http://localhost:3000/socket.io/socket.io.js"></script>
-    <script src="./main.js"></script>
   </body>
 </html>
