--- a/fe/index.html
+++ b/fe/index.html
@@ -22,6 +22,10 @@
     ></script>
 
     <script src="./js/helpers.js" defer></script>
+    <script src="./js/snippet-printing.js" defer></script>
+    <script src="./js/ace-helpers.js" defer></script>
+    <script src="./js/html.js" defer></script>
+    <script src="./js/socket.js" defer></script>
     <script src="./js/main.js" defer></script>
   </head>
   <body>
