--- a/fe/index.html
+++ b/fe/index.html
@@ -9,6 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;600&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+      integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="/css/index.min.css" />
     <script
       src="./libs/ace/ace.js"
